--- a/2048.html
+++ b/2048.html
@@ -10,9 +10,20 @@
     <body>
         <h1>2048</h1>
         <hr>
-        <h2>Score: <span id="score">0</span></h2>
+        <div class="score-container-parent">
+            <div class="score-container">
+                <p class="header">SCORE</p> 
+                <p id="score">0</p>
+            </div>
+            <div class="score-container">
+                <p class="header">BEST</p> 
+                <p id="best-score">0</p>
+            </div>
+        </div>
+        
         <div id="board">
         </div>
+        
     </body>
 </html>
 
